# SP-Homework

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: p3-1.py
problems/: 11scenario-benders.py  11scenario.py  p12-4.py  p19-2.py  p2-1.py  p2-5-1.py  p2-5-2.py  p20-2.py  p21-2.py  p4-2.py  p7-3-1.py  p7-3-2.py
problems/ev/: main.tex
problems/p12-4/: main.tex
problems/p17-2/: main.tex
problems/p27-2/: main.tex
problems/p4-4/: main.tex
problems/p5-2/: main.tex
problems/p8-2/: main.tex
